--- a/index.html
+++ b/index.html
@@ -2,171 +2,116 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Thực Đơn Căng Tin</title>
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f4f4f9;
-      color: #333;
-    }
-    header {
-      background: #4CAF50;
-      color: white;
-      padding: 1rem;
-      text-align: center;
-    }
-    .controls {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1rem;
-      padding: 1rem;
-      background: #fff;
-    }
-    .controls input, .controls select, .controls button {
-      padding: 0.5rem;
-      font-size: 1rem;
-    }
-    .calendar {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1rem;
-      padding: 1rem;
-    }
-    .day-card {
-      background: white;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      padding: 1rem;
-    }
-    .day-card.highlight {
-      border: 2px solid #4CAF50;
-    }
-    .day-card h3 {
-      margin-top: 0;
-      color: #4CAF50;
-    }
-    @media print {
-      .controls {
-        display: none;
-      }
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    h1 { text-align: center; }
+    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
+    th { background-color: #f2f2f2; }
+    input, select, button { margin: 5px; padding: 5px; }
+    @media (max-width: 600px) {
+      table, thead, tbody, th, td, tr { display: block; }
+      th { position: absolute; top: -9999px; left: -9999px; }
+      td { border: none; position: relative; padding-left: 50%; }
+      td:before { position: absolute; top: 6px; left: 6px; width: 45%; white-space: nowrap; }
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Thực Đơn Căng Tin</h1>
-  </header>
-  <div class="controls">
-    <label>Tháng:
-      <select id="monthSelect"></select>
-    </label>
-    <label>Năm:
-      <select id="yearSelect"></select>
-    </label>
-    <label>Ngày:
-      <input type="date" id="searchDate"/>
-    </label>
-    <button onclick="printWeek()">In tuần này</button>
-    <button onclick="window.print()">In cả tháng</button>
+  <h1>Thực Đơn Căng Tin</h1>
+
+  <div>
+    <label for="searchType">Tìm theo:</label>
+    <select id="searchType">
+      <option value="day">Ngày</option>
+      <option value="week">Tuần</option>
+      <option value="month">Tháng</option>
+    </select>
+
+    <input type="date" id="searchDate">
+    <button onclick="loadMenu()">Tìm kiếm</button>
   </div>
-  <div class="calendar" id="calendar"></div>
+
+  <table id="menuTable">
+    <thead>
+      <tr>
+        <th>Ngày</th>
+        <th>Bữa Sáng</th>
+        <th>Bữa Trưa</th>
+        <th>Bữa Tối</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 
   <script>
-    const sheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRmFqSY8mFtGKuW4bZMGA0FhpFc_HkcrzCS0kHEfaXoxftcxFV50NlEZyKVE44xlP4iyQwOkajMf4xz/pub?output=csv'; // Thay bằng link CSV của bạn
-    let menuData = [];
+    const sheetUrl = '
+    const sheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRmFqSY8mFtGKuW4bZMGA0FhpFc_HkcrzCS0kHEfaXoxftcxFV50NlEZyKVE44xlP4iyQwOkajMf4xz/pub?output=csv';
 
-    function fetchData() {
+    function parseCSV(data) {
+      const lines = data.trim().split('\n');
+      const result = [];
+      for (let i = 1; i < lines.length; i++) {
+        const [date, breakfast, lunch, dinner] = lines[i].split(',');
+        result.push({ date, breakfast, lunch, dinner });
+      }
+      return result;
+    }
+
+    function loadMenu() {
+      const searchType = document.getElementById('searchType').value;
+      const searchDate = new Date(document.getElementById('searchDate').value);
+      if (isNaN(searchDate)) {
+        alert("Vui lòng chọn ngày hợp lệ.");
+        return;
+      }
+
       fetch(sheetUrl)
-        .then(res => res.text())
-        .then(csv => {
-          const lines = csv.trim().split('\n');
-          const headers = lines[0].split(',');
-          menuData = lines.slice(1).map(line => {
-            const cols = line.split(',');
-            return {
-              date: cols[0],
-              breakfast: cols[1],
-              lunch: cols[2],
-              dinner: cols[3]
-            };
+        .then(response => response.text())
+        .then(data => {
+          const menuData = parseCSV(data);
+          let filtered = [];
+
+          menuData.forEach(item => {
+            const itemDate = new Date(item.date);
+            if (searchType === 'day') {
+              if (itemDate.toDateString() === searchDate.toDateString()) {
+                filtered.push(item);
+              }
+            } else if (searchType === 'week') {
+              const startOfWeek = new Date(searchDate);
+              startOfWeek.setDate(searchDate.getDate() - searchDate.getDay() + 1);
+              const endOfWeek = new Date(startOfWeek);
+              endOfWeek.setDate(startOfWeek.getDate() + 6);
+              if (itemDate >= startOfWeek && itemDate <= endOfWeek) {
+                filtered.push(item);
+              }
+            } else if (searchType === 'month') {
+              if (itemDate.getMonth() === searchDate.getMonth() &&
+                  itemDate.getFullYear() === searchDate.getFullYear()) {
+                filtered.push(item);
+              }
+            }
           });
-          populateMonthYear();
-          renderCalendar();
+
+          const tbody = document.querySelector('#menuTable tbody');
+          tbody.innerHTML = '';
+          filtered.forEach(item => {
+            const tr = document.createElement('tr');
+            tr.innerHTML = `<td>${item.date}</td><td>${item.breakfast}</td><td>${item.lunch}</td><td>${item.dinner}</td>`;
+            tbody.appendChild(tr);
+          });
+
+          if (filtered.length === 0) {
+            tbody.innerHTML = '<tr><td colspan="4">Không tìm thấy thực đơn cho thời gian đã chọn.</td></tr>';
+          }
+        })
+        .catch(error => {
+          console.error('Lỗi khi tải dữ liệu:', error);
         });
     }
-
-    function populateMonthYear() {
-      const monthSelect = document.getElementById('monthSelect');
-      const yearSelect = document.getElementById('yearSelect');
-      const dates = menuData.map(item => new Date(item.date));
-      const months = [...new Set(dates.map(d => d.getMonth()))];
-      const years = [...new Set(dates.map(d => d.getFullYear()))];
-
-      monthSelect.innerHTML = months.map(m => `<option value="${m}">${m+1}</option>`).join('');
-      yearSelect.innerHTML = years.map(y => `<option value="${y}">${y}</option>`).join('');
-
-      monthSelect.value = new Date().getMonth();
-      yearSelect.value = new Date().getFullYear();
-
-      monthSelect.onchange = renderCalendar;
-      yearSelect.onchange = renderCalendar;
-      document.getElementById('searchDate').onchange = highlightDate;
-    }
-
-    function renderCalendar() {
-      const month = parseInt(document.getElementById('monthSelect').value);
-      const year = parseInt(document.getElementById('yearSelect').value);
-      const calendar = document.getElementById('calendar');
-      calendar.innerHTML = '';
-
-      const filtered = menuData.filter(item => {
-        const d = new Date(item.date);
-        return d.getMonth() === month && d.getFullYear() === year;
-      });
-
-      filtered.forEach(item => {
-        const d = new Date(item.date);
-        const div = document.createElement('div');
-        div.className = 'day-card';
-        div.dataset.date = item.date;
-        div.innerHTML = `
-          <h3>${d.toLocaleDateString('vi-VN', { weekday: 'long', day: '2-digit', month: '2-digit' })}</h3>
-          <p><strong>Bữa sáng:</strong> ${item.breakfast}</p>
-          <p><strong>Bữa trưa:</strong> ${item.lunch}</p>
-          <p><strong>Bữa tối:</strong> ${item.dinner}</p>
-        `;
-        calendar.appendChild(div);
-      });
-    }
-
-    function highlightDate() {
-      const date = document.getElementById('searchDate').value;
-      document.querySelectorAll('.day-card').forEach(card => {
-        card.classList.toggle('highlight', card.dataset.date === date);
-      });
-    }
-
-    function printWeek() {
-      const today = new Date();
-      const start = new Date(today);
-      start.setDate(today.getDate() - today.getDay() + 1); // Monday
-      const end = new Date(start);
-      end.setDate(start.getDate() + 6); // Sunday
-
-      document.querySelectorAll('.day-card').forEach(card => {
-        const d = new Date(card.dataset.date);
-        card.style.display = (d >= start && d <= end) ? 'block' : 'none';
-      });
-      window.print();
-      renderCalendar(); // reset after print
-    }
-
-    fetchData();
   </script>
 </body>
 </html>
