--- a/index.html
+++ b/index.html
@@ -1,116 +1,128 @@
-
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <title>Thực Đơn Căng Tin</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Menu Canteen</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
-    h1 { text-align: center; }
-    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-    th { background-color: #f2f2f2; }
-    input, select, button { margin: 5px; padding: 5px; }
-    @media (max-width: 600px) {
-      table, thead, tbody, th, td, tr { display: block; }
-      th { position: absolute; top: -9999px; left: -9999px; }
-      td { border: none; position: relative; padding-left: 50%; }
-      td:before { position: absolute; top: 6px; left: 6px; width: 45%; white-space: nowrap; }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #f4f6f8;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      text-align: center;
+      color: #333;
+    }
+    .filters {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin-bottom: 20px;
+      flex-wrap: wrap;
+    }
+    .filters input, .filters select, .filters button {
+      padding: 8px;
+      font-size: 16px;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      gap: 15px;
+    }
+    .card {
+      background: white;
+      border-radius: 8px;
+      padding: 15px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    .card h3 {
+      margin: 0 0 10px;
+      color: #0077cc;
+    }
+    .card p {
+      margin: 5px 0;
     }
   </style>
 </head>
 <body>
-  <h1>Thực Đơn Căng Tin</h1>
-
-  <div>
-    <label for="searchType">Tìm theo:</label>
-    <select id="searchType">
-      <option value="day">Ngày</option>
-      <option value="week">Tuần</option>
-      <option value="month">Tháng</option>
+  <h1>Thực Đơn Canteen</h1>
+  <div class="filters">
+    <input type="date" id="dateFilter" />
+    <select id="rangeFilter">
+      <option value="all">Tất cả</option>
+      <option value="week">Tuần này</option>
+      <option value="month">Tháng này</option>
     </select>
-
-    <input type="date" id="searchDate">
-    <button onclick="loadMenu()">Tìm kiếm</button>
+    <button id="searchBtn">Tìm kiếm</button>
   </div>
-
-  <table id="menuTable">
-    <thead>
-      <tr>
-        <th>Ngày</th>
-        <th>Bữa Sáng</th>
-        <th>Bữa Trưa</th>
-        <th>Bữa Tối</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+  <div class="grid" id="menuGrid"></div>
 
   <script>
-    const sheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSP9XmNWZdN8-1IgPIO6ouqwHeICx_Sam1EvPmeAsMvHDTKMFVYLna4HD4LHnjEJllC5er7mZ3r8UrV/pub?output=csv';
+    const csvUrl = 'canteen_menu_sample.csv';
+    let allData = [];
 
-    function parseCSV(data) {
-      const lines = data.trim().split('\n');
-      const result = [];
-      for (let i = 1; i < lines.length; i++) {
-        const [date, breakfast, lunch, dinner] = lines[i].split(',');
-        result.push({ date, breakfast, lunch, dinner });
-      }
-      return result;
+    async function fetchCSV() {
+      const res = await fetch(csvUrl);
+      const text = await res.text();
+      const rows = text.trim().split('\n').map(row => row.split(','));
+      const headers = rows.shift();
+      return rows.map(row => {
+        const obj = {};
+        headers.forEach((h, i) => obj[h] = row[i]);
+        return obj;
+      });
     }
 
-    function loadMenu() {
-      const searchType = document.getElementById('searchType').value;
-      const searchDate = new Date(document.getElementById('searchDate').value);
-      if (isNaN(searchDate)) {
-        alert("Vui lòng chọn ngày hợp lệ.");
-        return;
-      }
-
-      fetch(sheetUrl)
-        .then(response => response.text())
-        .then(data => {
-          const menuData = parseCSV(data);
-          let filtered = [];
-
-          menuData.forEach(item => {
-            const itemDate = new Date(item.date);
-            if (searchType === 'day') {
-              if (itemDate.toDateString() === searchDate.toDateString()) {
-                filtered.push(item);
-              }
-            } else if (searchType === 'week') {
-              const startOfWeek = new Date(searchDate);
-              startOfWeek.setDate(searchDate.getDate() - searchDate.getDay() + 1);
-              const endOfWeek = new Date(startOfWeek);
-              endOfWeek.setDate(startOfWeek.getDate() + 6);
-              if (itemDate >= startOfWeek && itemDate <= endOfWeek) {
-                filtered.push(item);
-              }
-            } else if (searchType === 'month') {
-              if (itemDate.getMonth() === searchDate.getMonth() &&
-                  itemDate.getFullYear() === searchDate.getFullYear()) {
-                filtered.push(item);
-              }
-            }
-          });
-
-          const tbody = document.querySelector('#menuTable tbody');
-          tbody.innerHTML = '';
-          filtered.forEach(item => {
-            const tr = document.createElement('tr');
-            tr.innerHTML = `<td>${item.date}</td><td>${item.breakfast}</td><td>${item.lunch}</td><td>${item.dinner}</td>`;
-            tbody.appendChild(tr);
-          });
-
-          if (filtered.length === 0) {
-            tbody.innerHTML = '<tr><td colspan="4">Không tìm thấy thực đơn cho thời gian đã chọn.</td></tr>';
-          }
-        })
-        .catch(error => {
-          console.error('Lỗi khi tải dữ liệu:', error);
-        });
+    function filterData(data, date, range) {
+      const today = new Date();
+      return data.filter(item => {
+        const itemDate = new Date(item['Ngày']);
+        if (date && item['Ngày'] !== date) return false;
+        if (range === 'week') {
+          const startOfWeek = new Date(today);
+          startOfWeek.setDate(today.getDate() - today.getDay());
+          const endOfWeek = new Date(startOfWeek);
+          endOfWeek.setDate(startOfWeek.getDate() + 6);
+          return itemDate >= startOfWeek && itemDate <= endOfWeek;
+        }
+        if (range === 'month') {
+          return itemDate.getMonth() === today.getMonth() &&
+                 itemDate.getFullYear() === today.getFullYear();
+        }
+        return true;
+      });
     }
+
+    function renderGrid(data) {
+      const grid = document.getElementById('menuGrid');
+      grid.innerHTML = '';
+      const grouped = {};
+      data.forEach(item => {
+        if (!grouped[item['Ngày']]) grouped[item['Ngày']] = [];
+        grouped[item['Ngày']].push(item);
+      });
+
+      Object.keys(grouped).sort().forEach(date => {
+        const card = document.createElement('div');
+        card.className = 'card';
+        card.innerHTML = `<h3>${date}</h3>` + grouped[date].map(m =>
+          `<p><strong>${m['Bữa']}:</strong> ${m['Món ăn']}</p>`
+        ).join('');
+        grid.appendChild(card);
+      });
+    }
+
+    document.getElementById('searchBtn').addEventListener('click', async () => {
+      if (allData.length === 0) {
+        allData = await fetchCSV();
+      }
+      const date = document.getElementById('dateFilter').value;
+      const range = document.getElementById('rangeFilter').value;
+      const filtered = filterData(allData, date, range);
+      renderGrid(filtered);
+    });
   </script>
 </body>
 </html>
