--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <div class="grid" id="menuGrid"></div>
 
   <script>
-    const csvUrl = 'canteen_menu_sample.csv';
+    const csvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSP9XmNWZdN8-1IgPIO6ouqwHeICx_Sam1EvPmeAsMvHDTKMFVYLna4HD4LHnjEJllC5er7mZ3r8UrV/pub?output=csv';
     let allData = [];
 
     async function fetchCSV() {
