--- a/index.html
+++ b/index.html
@@ -58,102 +58,106 @@
   <div class="filters">
     <input type="date" id="dateFilter" />
     <select id="rangeFilter">
-      <option value="all">Tất cả</option>
-      <option value="week">Tuần này</option>
-      <option value="month">Tháng này</option>
-    </select>
-    <button id="searchBtn">Tìm kiếm</button>
+  <option value="day">Ngày</option>
+  <option value="week">Tuần</option>
+  <option value="month">Tháng</option>
+  </select>
+  <button id="searchBtn">Tìm kiếm</button>
   </div>
   <div id="loading">Đang tải dữ liệu...</div>
   <div class="grid" id="menuGrid"></div>
 
 
 <script>
-  const csvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSP9XmNWZdN8-1IgPIO6ouqwHeICx_Sam1EvPmeAsMvHDTKMFVYLna4HD4LHnjEJllC5er7mZ3r8UrV/pub?output=csv';
-  let allData = [];
+  const csvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSP9XmNWZdN8-1IgPIO6ouqwHeICx_Sam1EvPmeAsMvHDTKMFVYLna4HD4LHnjEJllC5er7mZ3r8UrV/pub?output=csv';
+  let allData = [];
 
-  async function fetchCSV() {
-    const res = await fetch(csvUrl);
-    const text = await res.text();
-    const rows = text.trim().split('\n').map(row => row.split(','));
-    const headers = rows.shift();
-    return rows.map(row => {
-      const obj = {};
-      headers.forEach((h, i) => obj[h.trim()] = row[i].trim());
-      return obj;
-    });
-  }
+  async function fetchCSV() {
+    const res = await fetch(csvUrl);
+    const text = await res.text();
+    const rows = text.trim().split('\n').map(row => row.split(','));
+    const headers = rows.shift();
+    return rows.map(row => {
+      const obj = {};
+      headers.forEach((h, i) => obj[h.trim()] = row[i].trim());
+      return obj;
+    });
+  }
 
-  function parseDate(str) {
-    const [y, m, d] = str.split('-');
-    return new Date(Number(y), Number(m) - 1, Number(d));
-  }
+  function parseDate(str) {
+    const [y, m, d] = str.split('-');
+    return new Date(Number(y), Number(m) - 1, Number(d));
+  }
 
-  function filterData(data, selectedDateStr, range) {
-    const selectedDate = selectedDateStr ? parseDate(selectedDateStr) : new Date();
+  function filterData(data, selectedDateStr, range) {
+    if (!selectedDateStr) return [];
 
-    return data.filter(item => {
-      const itemDate = parseDate(item['Ngày']);
+    const selectedDate = parseDate(selectedDateStr);
 
-      if (range === 'all') return true;
+    return data.filter(item => {
+      const itemDate = parseDate(item['Ngày']);
 
-      if (range === 'week') {
-        const dayOfWeek = selectedDate.getDay(); // 0 (Sun) - 6 (Sat)
-        const startOfWeek = new Date(selectedDate);
-        startOfWeek.setDate(selectedDate.getDate() - dayOfWeek);
-        startOfWeek.setHours(0, 0, 0, 0);
+      if (range === 'day') {
+        return itemDate.toDateString() === selectedDate.toDateString();
+      }
 
-        const endOfWeek = new Date(startOfWeek);
-        endOfWeek.setDate(startOfWeek.getDate() + 6);
-        endOfWeek.setHours(23, 59, 59, 999);
+      if (range === 'week') {
+        const dayOfWeek = selectedDate.getDay();
+        const startOfWeek = new Date(selectedDate);
+        startOfWeek.setDate(selectedDate.getDate() - dayOfWeek);
+        startOfWeek.setHours(0, 0, 0, 0);
 
-        return itemDate >= startOfWeek && itemDate <= endOfWeek;
-      }
+        const endOfWeek = new Date(startOfWeek);
+        endOfWeek.setDate(startOfWeek.getDate() + 6);
+        endOfWeek.setHours(23, 59, 59, 999);
 
-      if (range === 'month') {
-        return itemDate.getMonth() === selectedDate.getMonth() &&
-               itemDate.getFullYear() === selectedDate.getFullYear();
-      }
+        return itemDate >= startOfWeek && itemDate <= endOfWeek;
+      }
 
-      // Mặc định: lọc theo ngày cụ thể
-      return itemDate.toDateString() === selectedDate.toDateString();
-    });
-  }
+      if (range === 'month') {
+        return itemDate.getMonth() === selectedDate.getMonth() &&
+               itemDate.getFullYear() === selectedDate.getFullYear();
+      }
 
-  function renderGrid(data) {
-    const grid = document.getElementById('menuGrid');
-    grid.innerHTML = '';
-    const grouped = {};
-    data.forEach(item => {
-      if (!grouped[item['Ngày']]) grouped[item['Ngày']] = [];
-      grouped[item['Ngày']].push(item);
-    });
+      return false;
+    });
+  }
 
-    Object.keys(grouped).sort().forEach(date => {
-      const card = document.createElement('div');
-      card.className = 'card';
-      card.innerHTML = `<h3>${date}</h3>` + grouped[date].map(m =>
-        `<p><strong>${m['Bữa']}:</strong> ${m['Món ăn']}</p>`
-      ).join('');
-      grid.appendChild(card);
-    });
-  }
+  function renderGrid(data) {
+    const grid = document.getElementById('menuGrid');
+    grid.innerHTML = '';
+    const grouped = {};
+    data.forEach(item => {
+      if (!grouped[item['Ngày']]) grouped[item['Ngày']] = [];
+      grouped[item['Ngày']].push(item);
+    });
 
-  document.getElementById('searchBtn').addEventListener('click', async () => {
-    const loading = document.getElementById('loading');
-    loading.style.display = 'block';
+    Object.keys(grouped).sort().forEach(date => {
+      const card = document.createElement('div');
+      card.className = 'card';
+      card.innerHTML = `<h3>${date}</h3>` + grouped[date].map(m =>
+        `<p><strong>${m['Bữa']}:</strong> ${m['Món ăn']}</p>`
+      ).join('');
+      grid.appendChild(card);
+    });
+  }
 
-    if (allData.length === 0) {
-      allData = await fetchCSV();
-    }
+  document.getElementById('searchBtn').addEventListener('click', async () => {
+    const loading = document.getElementById('loading');
+    loading.style.display = 'block';
 
-    const date = document.getElementById('dateFilter').value;
-    const range = document.getElementById('rangeFilter').value;
-    const filtered = filterData(allData, date, range);
-    renderGrid(filtered);
+    if (allData.length === 0) {
+      allData = await fetchCSV();
+    }
 
-    loading.style.display = 'none';
-  });
+    const date = document.getElementById('dateFilter').value;
+    const range = document.getElementById('rangeFilter').value;
+    const filtered = filterData(allData, date, range);
+    renderGrid(filtered);
+
+    loading.style.display = 'none';
+  });
 </script>
+
 </body>
 </html>
