--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Menu Canteen</title>
+  <title>Menu Canteen Movenpick PQ</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -54,7 +54,7 @@
   </style>
 </head>
 <body>
-  <h1>Thực Đơn Canteen</h1>
+  <h1>Thực Đơn Canteen Mövenpick Phu Quoc</h1>
   <div class="filters">
     <input type="date" id="dateFilter" />
     <select id="rangeFilter">
