--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </head>
 <body>
   <div class="logo-container">
-  <img src="dataroom-mvppq/img/mvp_pq_logo.png" alt="Logo MVP PQ" class="logo" />
+  <img src="./dataroom-mvppq/img/mvp_pq_logo.png" alt="Logo MVP PQ" class="logo" />
   </div>
   <h1>Thực Đơn Canteen Mövenpick Phu Quoc</h1>
   <div class="filters">
