--- a/index.html
+++ b/index.html
@@ -12,14 +12,20 @@
       padding: 20px;
     }
     
-    .logo-container {
-      text-align: center;
-      margin-bottom: 10px;
-    }
-    .logo {
-      max-height: 80px;
-      object-fit: contain;
-    }
+     .logo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+
+  .logo {
+    max-width: 200px;
+    max-height: 100px;
+    width: auto;
+    height: auto;
+  }
+
 
     h1 {
       text-align: center;
