--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <div class="logo-container">
   <img src="https://adminmvppq.github.io/dataroom-mvppq/img/mvp_pq_logo.png" alt="Logo MVP PQ" class="logo" />
   </div>
-  <h1>Thực Đơn Canteen Mövenpick Phu Quoc</h1>
+  <h1>Thực Đơn Canteen</h1>
   <div class="filters">
     <input type="date" id="dateFilter" />
     <select id="rangeFilter">
