--- a/index.html
+++ b/index.html
@@ -5,107 +5,117 @@
     <meta charset="UTF-8">
     <title>Menu Canteen</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap CSS for responsive layout -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body { padding: 20px; font-family: Arial, sans-serif; }
-        .logo { max-height: 80px; }
-        .meal-section { margin-top: 30px; }
-        .meal-title { margin-top: 20px; font-weight: bold; }
-        .card { margin-bottom: 15px; }
+        body { font-family: Arial, sans-serif; margin: 20px; }
+        .logo { max-height: 60px; }
+        .header { display: flex; align-items: center; justify-content: space-between; }
+        .search-bar { margin: 20px 0; }
+        .grid-container { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 20px; }
+        .menu-card { border: 1px solid #ccc; border-radius: 8px; padding: 15px; background: #f9f9f9; }
+        .menu-card h3 { margin-top: 0; }
+        .dropdown { padding: 8px; font-size: 16px; }
+        .date-input { padding: 8px; font-size: 16px; margin-left: 10px; }
     </style>
 </head>
 <body>
-    <div class="container">
-        <!-- Logo -->
-        <div class="text-center mb-4">
-            <img src="https://via.placeholder.com/200x80?text=Company+Logo" alt="Company Logo" class="logo">
-        </div>
-
-        <!-- Date Picker -->
-        <div class="row mb-4">
-            <div class="col-md-4">
-                <input type="date" id="datePicker" class="form-control">
-            </div>
-            <div class="col-md-8">
-                <button class="btn btn-primary me-2" onclick="filterByDate()">Tìm theo ngày</button>
-                <button class="btn btn-secondary me-2" onclick="filterByWeek()">Tìm theo tuần</button>
-                <button class="btn btn-success" onclick="filterByMonth()">Tìm theo tháng</button>
-            </div>
-        </div>
-
-        <!-- Menu Grid -->
-        <div id="menuGrid" class="row row-cols-1 row-cols-md-3 g-4">
-            <!-- Cards will be inserted here -->
-        </div>
+    <div class="header">
+        <img src="https://via.placeholder.com/150x60?text=Company+Logo" alt="Company Logo" class="logo">
+        <h1>Thực Đơn Canteen</h1>
     </div>
 
-    <!-- JavaScript to fetch and display data -->
+    <div class="search-bar">
+        <label for="searchType">Tìm kiếm:</label>
+        <select id="searchType" class="dropdown">
+            <option value="day">Theo ngày</option>
+            <option value="week">Theo tuần</option>
+            <option value="month">Theo tháng</option>
+        </select>
+        <input type="date" id="searchDate" class="date-input">
+        <button onclick="filterMenu()">Tìm</button>
+    </div>
+
+    <div id="menuGrid" class="grid-container"></div>
+
     <script>
+        const sheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSP9XmNWZdN8-1IgPIO6ouqwHeICx_Sam1EvPmeAsMvHDTKMFVYLna4HD4LHnjEJllC5er7mZ3r8UrV/pub?gid=1946670694&single=true&output=csv";
+
         let menuData = [];
 
-        async function fetchData() {
-            const response = await fetch("https://docs.google.com/spreadsheets/d/e/2PACX-1vSP9XmNWZdN8-1IgPIO6ouqwHeICx_Sam1EvPmeAsMvHDTKMFVYLna4HD4LHnjEJllC5er7mZ3r8UrV/pub?gid=1946670694&single=true&output=csv");
-            const text = await response.text();
-            const rows = text.split("\n").slice(1);
-            menuData = rows.map(row => {
-                const [date, meal, appetizer, main, dessert] = row.split(",");
-                return { date, meal, appetizer, main, dessert };
+        function groupByDate(data) {
+            const grouped = {};
+            data.forEach(row => {
+                const date = row["Ngày"];
+                if (!grouped[date]) grouped[date] = [];
+                grouped[date].push(row);
             });
-            displayMenu(menuData);
+            return grouped;
         }
 
-        function displayMenu(data) {
-            const grid = document.getElementById("menuGrid");
-            grid.innerHTML = "";
-            data.forEach(item => {
+        function renderMenu(data) {
+            const container = document.getElementById("menuGrid");
+            container.innerHTML = "";
+            const grouped = groupByDate(data);
+            for (const date in grouped) {
                 const card = document.createElement("div");
-                card.className = "col";
-                card.innerHTML = `
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h5 class="card-title">${item.meal} - ${item.date}</h5>
-                            <p><strong>Khai vị:</strong> ${item.appetizer}</p>
-                            <p><strong>Món chính:</strong> ${item.main}</p>
-                            <p><strong>Tráng miệng:</strong> ${item.dessert}</p>
-                        </div>
-                    </div>
-                `;
-                grid.appendChild(card);
+                card.className = "menu-card";
+                card.innerHTML = `<h3>${date}</h3>`;
+                grouped[date].forEach(item => {
+                    card.innerHTML += `
+                        <p><strong>${item["Bữa ăn"]}</strong></p>
+                        <ul>
+                            <li><strong>Khai vị:</strong> ${item["Khai vị"]}</li>
+                            <li><strong>Món chính:</strong> ${item["Món chính"]}</li>
+                            <li><strong>Tráng miệng:</strong> ${item["Tráng miệng"]}</li>
+                        </ul>
+                    `;
+                });
+                container.appendChild(card);
+            }
+        }
+
+        function filterMenu() {
+            const type = document.getElementById("searchType").value;
+            const dateInput = document.getElementById("searchDate").value;
+            if (!dateInput) return alert("Vui lòng chọn ngày");
+
+            const selectedDate = new Date(dateInput);
+            const filtered = menuData.filter(row => {
+                const rowDate = new Date(row["Ngày"]);
+                if (type === "day") {
+                    return rowDate.toDateString() === selectedDate.toDateString();
+                } else if (type === "week") {
+                    const startOfWeek = new Date(selectedDate);
+                    startOfWeek.setDate(selectedDate.getDate() - selectedDate.getDay());
+                    const endOfWeek = new Date(startOfWeek);
+                    endOfWeek.setDate(startOfWeek.getDate() + 6);
+                    return rowDate >= startOfWeek && rowDate <= endOfWeek;
+                } else if (type === "month") {
+                    return rowDate.getMonth() === selectedDate.getMonth() &&
+                           rowDate.getFullYear() === selectedDate.getFullYear();
+                }
+                return false;
+            });
+
+            renderMenu(filtered);
+        }
+
+        function parseCSV(text) {
+            const lines = text.trim().split("\n");
+            const headers = lines[0].split(",");
+            return lines.slice(1).map(line => {
+                const values = line.split(",");
+                const obj = {};
+                headers.forEach((h, i) => obj[h.trim()] = values[i]?.trim());
+                return obj;
             });
         }
 
-        function filterByDate() {
-            const selected = document.getElementById("datePicker").value;
-            const filtered = menuData.filter(item => item.date === selected);
-            displayMenu(filtered);
-        }
-
-        function filterByWeek() {
-            const selected = new Date(document.getElementById("datePicker").value);
-            const start = new Date(selected);
-            start.setDate(selected.getDate() - selected.getDay());
-            const end = new Date(start);
-            end.setDate(start.getDate() + 6);
-            const filtered = menuData.filter(item => {
-                const d = new Date(item.date);
-                return d >= start && d <= end;
+        fetch(sheetUrl)
+            .then(res => res.text())
+            .then(text => {
+                menuData = parseCSV(text);
+                renderMenu(menuData);
             });
-            displayMenu(filtered);
-        }
-
-        function filterByMonth() {
-            const selected = new Date(document.getElementById("datePicker").value);
-            const month = selected.getMonth();
-            const year = selected.getFullYear();
-            const filtered = menuData.filter(item => {
-                const d = new Date(item.date);
-                return d.getMonth() === month && d.getFullYear() === year;
-            });
-            displayMenu(filtered);
-        }
-
-        fetchData();
     </script>
 </body>
 </html>
