--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="https://via.placeholder.com/150x60?text=Company+Logo" alt="Company Logo" class="logo">
+        <img src="https://adminmvppq.github.io/dataroom-mvppq/img/mvp_pq_logo.png" alt="Company Logo" class="logo">
         <h1>Thực Đơn Canteen</h1>
     </div>
 
