--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
     <div class="container">
         <div class="header d-flex align-items-center justify-content-between">
-            <img src="https://via.placeholder.com/150x80?text=Logo" alt="Company Logo" class="logo">
+            <img src="https://adminmvppq.github.io/dataroom-mvppq/img/mvp_pq_logo.png" alt="MVP PQ Logo" class="logo">
             <h2 class="text-primary">Thực Đơn Canteen</h2>
         </div>
 
