--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -6,7 +5,7 @@
     <title>Thực Đơn Canteen</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap 5 CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css
     <style>
         body {
             background-color: #f8f9fa;
@@ -55,6 +54,16 @@
             z-index: 9999;
             display: none;
         }
+        @media (max-width: 576px) {
+            .header {
+                flex-direction: column !important;
+                align-items: flex-start !important;
+                text-align: left;
+            }
+            .header img {
+                margin-bottom: 10px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -65,8 +74,8 @@
     </div>
 
     <div class="container">
-        <div class="header d-flex align-items-center justify-content-between">
-            <img src="https://adminmvppq.github.io/dataroom-mvppq/img/mvp_pq_logo.png" alt="MVP PQ Logo" class="logo">
+        <div class="header d-flex align-items-center justify-content-between flex-wrap">
+            https://adminmvppq.github.io/dataroom-mvppq/img/mvp_pq_logo.png
             <h2 class="text-primary">Thực Đơn Canteen</h2>
         </div>
 
