--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Thực Đơn Canteen</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap 5 CDN -->
-    https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             background-color: #f8f9fa;
@@ -54,16 +54,6 @@
             z-index: 9999;
             display: none;
         }
-        @media (max-width: 576px) {
-            .header {
-                flex-direction: column !important;
-                align-items: flex-start !important;
-                text-align: left;
-            }
-            .header img {
-                margin-bottom: 10px;
-            }
-        }
     </style>
 </head>
 <body>
@@ -74,8 +64,8 @@
     </div>
 
     <div class="container">
-        <div class="header d-flex align-items-center justify-content-between flex-wrap">
-            https://adminmvppq.github.io/dataroom-mvppq/img/mvp_pq_logo.png
+        <div class="header d-flex align-items-center justify-content-between">
+            <img src="https://adminmvppq.github.io/dataroom-mvppq/img/mvp_pq_logo.png" alt="MVP PQ Logo" class="logo">
             <h2 class="text-primary">Thực Đơn Canteen</h2>
         </div>
 
