--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap 5 CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body {
+         body {
             background-color: #f8f9fa;
             font-family: 'Segoe UI', sans-serif;
         }
@@ -43,16 +43,17 @@
         .search-bar {
             margin-bottom: 20px;
         }
-        #loadingOverlay {
-            position: fixed;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
-            background: rgba(255,255,255,0.8);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 9999;
-            display: none;
+
+        /* Responsive fix for mobile */
+        @media (max-width: 576px) {
+            .header {
+                flex-direction: column !important;
+                align-items: flex-start !important;
+                text-align: left;
+            }
+            .header img {
+                margin-bottom: 10px;
+            }
         }
     </style>
 </head>
