--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
 
     <div class="container">
-        <div class="header d-flex align-items-center justify-content-between">
+        <div class="header d-flex align-items-center justify-content-between flex-wrap">
             <img src="https://adminmvppq.github.io/dataroom-mvppq/img/mvp_pq_logo.png" alt="MVP PQ Logo" class="logo">
             <h2 class="text-primary">Thực Đơn Canteen</h2>
         </div>
