--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -7,7 +8,7 @@
     <!-- Bootstrap 5 CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-         body {
+        body {
             background-color: #f8f9fa;
             font-family: 'Segoe UI', sans-serif;
         }
@@ -43,17 +44,16 @@
         .search-bar {
             margin-bottom: 20px;
         }
-
-        /* Responsive fix for mobile */
-        @media (max-width: 576px) {
-            .header {
-                flex-direction: column !important;
-                align-items: flex-start !important;
-                text-align: left;
-            }
-            .header img {
-                margin-bottom: 10px;
-            }
+        #loadingOverlay {
+            position: fixed;
+            top: 0; left: 0;
+            width: 100%; height: 100%;
+            background: rgba(255,255,255,0.8);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 9999;
+            display: none;
         }
     </style>
 </head>
@@ -65,7 +65,7 @@
     </div>
 
     <div class="container">
-        <div class="header d-flex align-items-center justify-content-between flex-wrap">
+        <div class="header d-flex align-items-center justify-content-between">
             <img src="https://adminmvppq.github.io/dataroom-mvppq/img/mvp_pq_logo.png" alt="MVP PQ Logo" class="logo">
             <h2 class="text-primary">Thực Đơn Canteen</h2>
         </div>
